--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -16,9 +16,18 @@
 %\listoftables
 
 \mainmatter
-\input{matter/theory}
+%\input{matter/intro}
+\part{Theory}
+%\input{matter/introduction to languages}
+\input{matter/lresystems}
 \input{matter/baseline}
 \input{matter/ivector}
+
+\part{implementation}
+
+
+\part{results}
+
 
 
 \bibliographystyle{ieeetr}
