--- a/latex/references.bib
+++ b/latex/references.bib
@@ -79,6 +79,21 @@
   year={1999},
   publisher={MIT Press}
 }
+@phdthesis{butphnrec,
+  title = {Phoneme recognition based on long temporal context},
+  author = {Schwarz, P.},
+  year = {2008},
+  school = {Brno University of Technology, Faculty of Information Technology},
+  type = {Doctoral thesis}
+}
+
+
+@article{schwarz2009phoneme,
+  title={Phoneme recognition based on long temporal context$\}$},
+  author={Schwarz, P.},
+  year={2009},
+  publisher={Faculty of Information Technology BUT$\}$}
+}
 
 
 
